cmake_minimum_required(VERSION 2.8)

SET (PACKAGENAME "Polyhedron_3")
SET (MODULENAME "CGAL_${PACKAGENAME}")
SET (INTERFACE_FILES  "${MODULENAME}.i")
SET (OBJECT_FILES "")
SET (JAVA_OBJECT_FILES "../Java/JavaData.cpp")
SET (PYTHON_OBJECT_FILES "")
SET (JAVAPACKAGENAME "CGAL.${PACKAGENAME}")
SET (JAVABUILDPATH "../../build-java/CGAL/${PACKAGENAME}")
SET (LIBSTOLINKWITH "CGAL_Kernel")


INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET_SOURCE_FILES_PROPERTIES(${INTERFACE_FILES} PROPERTIES CPLUSPLUS ON)

#Build bindings for python
if(PYTHONLIBS_FOUND)
  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
  SET (CMAKE_SWIG_OUTDIR ${PYTHONBUILDPATH})
  SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PYTHONBUILDPATH})
  SWIG_ADD_MODULE(${MODULENAME} python ${INTERFACE_FILES} ${OBJECT_FILES} ${PYTHON_OBJECT_FILES})
  FOREACH(ONELIB ${LIBSTOLINKWITH})
    SWIG_LINK_LIBRARIES(${MODULENAME} :${PYTHONBUILDPATH}/"_${ONELIB}${CMAKE_SHARED_LIBRARY_SUFFIX}")
  ENDFOREACH(ONELIB)
else()
  message("Python has not been found, ${PACKAGENAME} bindings for python will not be compiled.")
endif()

#Build bindings for java
find_package(JNI)
if (JAVA_INCLUDE_PATH)
  INCLUDE_DIRECTORIES(BEFORE ${JAVA_INCLUDE_PATH} ${JAVA_INCLUDE_PATH2})
  LINK_DIRECTORIES(${JAVALIBPATH})
  SET (CMAKE_SWIG_OUTDIR ${JAVABUILDPATH})
  SET(CMAKE_SWIG_FLAGS -package ${JAVAPACKAGENAME})
  SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${JAVALIBPATH})
  SWIG_ADD_MODULE(${MODULENAME} java ${INTERFACE_FILES} ${OBJECT_FILES} ${JAVA_OBJECT_FILES})
  SWIG_LINK_LIBRARIES(${MODULENAME} ${LIBSTOLINKWITH})
else()
  message("JNI has not be found, ${PACKAGENAME} bindings for java will not be compiled.")
endif()

  

